[gd_scene load_steps=3 format=3 uid="uid://dkn8gxfmy5tm6"]

[ext_resource type="Script" path="res://Scripts/LabelDialogue.gd" id="1_2hgxt"]
[ext_resource type="LabelSettings" uid="uid://cb4pba1oc265c" path="res://Data/Fonts/FantasyLabel.tres" id="2_g6c7l"]

[node name="LabelDialogue" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 298.0
offset_bottom = 175.0
script = ExtResource("1_2hgxt")

[node name="PanelGeneral" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 101.0
offset_right = 494.0
offset_bottom = 175.0

[node name="NombrePanel" type="Panel" parent="PanelGeneral"]
layout_mode = 0
offset_left = 1.0
offset_top = -23.0
offset_right = 125.0
offset_bottom = -1.0

[node name="Nombre" type="Label" parent="PanelGeneral/NombrePanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 85.0
offset_bottom = 27.0
text = "NombrePJ"
label_settings = ExtResource("2_g6c7l")

[node name="Dialogo" type="Label" parent="PanelGeneral"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 84.0
offset_bottom = 32.0
text = "\"Di√°logo\""
label_settings = ExtResource("2_g6c7l")
